# AutoSyncClaude

./: .gitignore  ALL_FIXES.md  BUILD_STATUS.md  DOWNLOAD_GUI.md  FINAL_STATUS.md  FIXES_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  GUI_BUILD_INSTRUCTIONS.md  GUI_CLIENT_README.md  INSTALL.md  PHASE2_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TAURI_LINUX_DEPS.md  build_proto.bat  tmpclaude-05b4-cwd  tmpclaude-fb17-cwd
.claude/: settings.local.json
.github/workflows/: build.yml  generate-proto.yml
client/: Cargo.toml  build.rs  tmpclaude-9f7f-cwd  tmpclaude-fa79-cwd
client/src/: config.rs  conflict.rs  connection_pool.rs  error.rs  grpc_client.rs  lib.rs  main.rs  monitoring.rs  network.rs  retry.rs  rules.rs  sync.rs  token.rs  transfer.rs  watcher.rs
client/src/proto/: mod.rs
docker/: .env.example  docker-compose.yml  nginx.conf
docs/: PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md
gui-client/: .gitignore  generate-icon-source.js  generate-icon.js  package-lock.json  package.json
gui-client/src/: app.js  index.html  styles.css
gui-client/src-tauri/: Cargo.toml  tauri.conf.json
gui-client/src-tauri/icons/: README.md  generate_icons.ps1  generate_icons.sh
gui-client/src-tauri/src/: config.rs  main.rs  state.rs
gui-client/src-tauri/src/commands/: auth.rs  config.rs  devices.rs  mod.rs  rules.rs  sync.rs
migrations/: init.sql
proto/: README.md  build.bat  build.sh  sync.proto
server/: .dockerignore  Cargo.toml  Dockerfile  build.rs  rustfmt.toml  tmpclaude-5041-cwd
server/migrations/: 001_initial.sql
server/src/: auth.rs  cache.rs  config.rs  db.rs  health.rs  main.rs  models.rs  server.rs  storage.rs
server/src/grpc/: auth_service.rs  device_service.rs  mod.rs  notification_service.rs  sync_service.rs
tools/gen_proto/: Cargo.toml
tools/gen_proto/src/: main.rs
