[package]
name = "claude-sync-gui"
version = "0.1.0"
description = "Claude Sync GUI Client"
authors = ["Claude Sync Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"

# HTTP 客户端（用于与服务器通信）
reqwest = { version = "0.11", features = ["json"] }

# 注意：暂时移除了对 claude-sync 库的直接依赖，避免 Windows 链接器问题
# 未来可以通过 HTTP API 与服务器通信，或者修复链接器问题后重新添加依赖

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
